--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "liblouis-2.5.3.tar.gz": a2ba4d99bab07900dba02a03349f2099beb9b490
+  liblouis-3.35.0.tar.gz: 4aeb4917f5d729f2f15baa1d38d3f760b3e8619b
